cluster/services/home-assistant/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: home-assistant
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`homeassistant.${DOMAIN_INTERNAL}`)
      services:
        - kind: Service
          name: home-assistant
          namespace: home-assistant
          port: 8123
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
        - name: optimizations
          namespace: traefik
        - name: error-pages
          namespace: traefik-errors
  tls:
    secretName: homeassistant.${DOMAIN_INTERNAL}
